--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -50,11 +50,12 @@ general {
   gaps_out = 10
 
   border_size = 2
-  col.active_border = rgba(7dd3fcee) rgba(0369a1ee) 45deg
+# col.active_border = rgba(7dd3fcee) rgba(0369a1ee) 45deg
+  col.active_border = rgba(e78a4eee) rgba(d8a657ee) 45deg
   col.inactive_border = rgba(262626ee)
 
-  # layout = dwindle
-  layout = master
+  layout = dwindle
+  # layout = master
 
   # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
   allow_tearing = false
@@ -64,7 +65,7 @@ decoration {
   # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
   dim_special = 0.2
-  rounding = 10
+  rounding = 5
 
   active_opacity = 1
   inactive_opacity = 0.9
@@ -98,8 +99,8 @@ animations {
 
 dwindle {
     # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
-    pseudotile = yes # master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
-    preserve_split = yes # you probably want this
+    pseudotile = true # master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
+    preserve_split = true # you probably want this
 }
 
 master {
@@ -131,12 +132,13 @@ misc {
 # }
 
 # Example windowrule v1
-# windowrule = float, ^(kitty)$
-# Example windowrule v2
-# windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
+# windowrule = float, ^(ghostty)$
+# # Example windowrule v2
+# windowrulev2 = float,class:^(ghostty)$,title:^(ghostty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 # windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 # layerrule = noanim, wofi
+
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
@@ -200,8 +202,8 @@ bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
 # Example special workspace (scratchpad)
-bind = $mainMod, S, togglespecialworkspace, magic
-bind = $mainMod SHIFT, S, movetoworkspace, special:magic
+bind = $mainMod, minus, togglespecialworkspace, size
+bind = $mainMod SHIFT, return, movetoworkspace, special:size
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
