--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -11,6 +11,7 @@ exec-once = gsettings set org.gnome.desktop.interface cursor-theme "Bibata-Moder
 $terminal = ghostty
 $fileManager = nautilus
 $menu = wofi --show drun
+# $menu = rofi -show drun
 
 
 xwayland {
@@ -50,8 +51,8 @@ general {
   gaps_out = 10
 
   border_size = 2
-# col.active_border = rgba(7dd3fcee) rgba(0369a1ee) 45deg
-  col.active_border = rgba(e78a4eee) rgba(d8a657ee) 45deg
+col.active_border = rgba(7dd3fcee) rgba(0369a1ee) 45deg
+  # col.active_border = rgba(e78a4eee) rgba(d8a657ee) 45deg
   col.inactive_border = rgba(262626ee)
 
   layout = dwindle
@@ -65,7 +66,7 @@ decoration {
   # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
   dim_special = 0.2
-  rounding = 5
+  rounding = 10
 
   active_opacity = 1
   inactive_opacity = 0.9
@@ -202,8 +203,8 @@ bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
 # Example special workspace (scratchpad)
-bind = $mainMod, minus, togglespecialworkspace, size
-bind = $mainMod SHIFT, return, movetoworkspace, special:size
+bind = $mainMod, minus, togglespecialworkspace, magic
+bind = $mainMod SHIFT, return, movetoworkspace, special:magic
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
