--- a/.config/yazi/yazi.toml
+++ b/.config/yazi/yazi.toml
@@ -2,3 +2,15 @@
 show_hidden = true
 ratio = [1,2,3]
 linemode = "size_and_mtime"
+
+[preview]
+tab_size = 2
+max_width = 800
+max_height = 900
+cache_dir = ""
+# image_delay = 30
+image_filter = "triangle"
+image_quality = 75
+sixel_fraction = 15
+ueberzug_scale = 1
+ueberzug_offset = [0, 0, 0, 0]
