--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -5,13 +5,15 @@ monitor=eDP-1,preferred,auto,1
 exec-once = waybar 
 exec-once = hyrpidle
 exec-once = hyprpaper &
+exec-once = waypaper --restore
+exec-once = hyprpm reload -n
 exec-once = gsettings set org.gnome.desktop.interface cursor-theme "Bibata-Modern-Ice"
 
 # Set programs that you use
 $terminal = ghostty
 $fileManager = nautilus
-$menu = wofi --show drun
-# $menu = rofi -show drun
+# $menu = wofi --show drun
+$menu = rofi -show drun
 
 
 xwayland {
@@ -51,12 +53,13 @@ general {
   gaps_out = 10
 
   border_size = 2
-col.active_border = rgba(7dd3fcee) rgba(0369a1ee) 45deg
-  # col.active_border = rgba(e78a4eee) rgba(d8a657ee) 45deg
+# col.active_border = rgba(7dd3fcee) rgba(0369a1ee) 45deg
+  col.active_border = rgba(cba6f7ee) rgba(cba6f7ee) 45deg
   col.inactive_border = rgba(262626ee)
 
   layout = dwindle
   # layout = master
+  # layout = hy3
 
   # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
   allow_tearing = false
