Update styling in sway

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -6,7 +6,7 @@ exec-once = waybar
 exec-once = hyrpidle
 exec-once = hyprpaper &
 exec-once = waypaper --restore
-exec-once = hyprpm reload -n
+# exec-once = hyprpm reload -n
 exec-once = gsettings set org.gnome.desktop.interface cursor-theme "Bibata-Modern-Ice"
 
 # Set programs that you use
