--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -13,9 +13,9 @@ gtk-titlebar = true
 gtk-single-instance = true
 gtk-tabs-location = top
 gtk-wide-tabs = false
-window-padding-y = 50,0
-window-padding-x = 50,0
-window-padding-balance = true
+# window-padding-y = 50,0
+# window-padding-x = 50,0
+window-padding-balance = false
 window-decoration = false
 
 # Other
