fix to issue related to https

--- a/.config/git/config
+++ b/.config/git/config
@@ -91,10 +91,11 @@
     markEmptyLines = false
 
 # URL shortcuts
-[url "git@github.com:"]
+[url "https://github.com:"]
     insteadOf = "gh:"
 
 [url "ssh://git@git.qrator.net:2202/radar/"]
     insteadOf = "radar:"
+
 [credential]
 	helper = store
