--- a/.config/sway/config
+++ b/.config/sway/config
@@ -242,7 +242,23 @@ bindsym ctrl+Shift+F12 exec grimshot save area ~/Pictures/Screenshots/screenshot
 #
 # Read `man 5 sway-bar` for more information about this section.
 bar {
-  swaybar_command waybar
+    swaybar_command waybar
+    # status_command i3status
+    # position bottom
+    # font pango:Jetbrains Mono 10
+    # colors {
+    #     background #000000
+    #     statusline #ffffff
+    #     separator #666666
+    #     focused_workspace  #4c7899 #285577 #ffffff
+    #     active_workspace   #333333 #5c5c5c #ffffff
+    #     inactive_workspace #333333 #222222 #888888
+    #     urgent_workspace   #2f343a #900000 #ffffff
+    #     binding_mode       #2f343a #900000 #ffffff
+    # }
+    # separator_symbol " | "
+    # strip_workspace_numbers yes
+    # tray_output primary
 }
 
 ######################################
